fix link to heading not hide the heading behind the header

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -41,7 +41,9 @@
     box-sizing: border-box;
 }
 
-*:target{ padding-top: 100px;margin-top: -100px}
+*:target{
+    scroll-margin-top: calc(var(--nav-height) + 1em);
+}
 
 html {
     font-family: 'Roboto', sans-serif;
